@@ -1,5 +1,13 @@
 #########################
 #
+# Version 2.x
+# ?, 2014
+#
+#########################
+- Switched from mysql_* to PDO.
+
+#########################
+#
 # Version 2.1.0
 # February 8, 2014
 #
